added subtitles to curation tool pictures

--- a/curation.html
+++ b/curation.html
@@ -94,8 +94,8 @@
 				</p>
 
 				<!-- show pictures of the previous version -->
-				<a class="fancybox" rel="curation tool before" title="Findings list" href="img/curation/before/snapshot-all%20findings.JPG"><img class="gallery2" id="curation_before_1" src="img/curation/before/snapshot-all%20findings.JPG" alt="" style="vertical-align: top;"/></a>
-				<a class="fancybox" rel="curation tool before" title="Article" href="img/curation/before/snapshot-finding.JPG"><img class="gallery2" id="curation_before_2" src="img/curation/before/snapshot-above%20fold.jpg" alt="" /></a>
+				<a class="fancybox" rel="curation tool before" title="List of findings belonging to a research article" href="img/curation/before/snapshot-all%20findings.JPG"><img class="gallery2" id="curation_before_1" src="img/curation/before/snapshot-all%20findings.JPG" alt="" style="vertical-align: top;"/></a>
+				<a class="fancybox" rel="curation tool before" title="Form to be completed for each finding" href="img/curation/before/snapshot-finding.JPG"><img class="gallery2" id="curation_before_2" src="img/curation/before/snapshot-above%20fold.jpg" alt="" /></a>
 
 				<!-- explain in a few words the main flows -->
 
@@ -222,7 +222,7 @@
 									<li>finding view, layout changes and is confusing when selecting a longer text from
 										the judgement dropdown
 									</li>
-									<li>finding view, autocompletion choices can be collapsed to occupy less space</li>
+									<li>finding view, auto completion choices can be collapsed to occupy less space</li>
 									<li>finding view, navigation with tab is helpful when you do fast and repetitive
 										tasks
 									</li>
@@ -284,8 +284,8 @@
 				<p>There was not much to change when it came to displaying lists of articles and findings. I did clean
 					up the screens, removing the unnecessary lines and using visual groupings instead.</p>
 
-				<a class="fancybox" rel="curation after" title="Home screen" href="img/curation/after/1.homescreen.png"><img class="gallery2" id="curation_after_1" src="img/curation/after/1.homescreen.png" alt="" /></a>
-				<a class="fancybox" rel="curation after" title="Home screen" href="img/curation/after/2.display%20findings%20for%20article.png"><img class="gallery2" id="curation_after_2" src="img/curation/after/2.display%20findings%20for%20article.png" alt="" /></a>
+				<a class="fancybox" rel="curation after" title="Home screen with the list of assigned research articles and their status" href="img/curation/after/1.homescreen.png"><img class="gallery2" id="curation_after_1" src="img/curation/after/1.homescreen.png" alt="" /></a>
+				<a class="fancybox" rel="curation after" title="List of findings belonging to a research article" href="img/curation/after/2.display%20findings%20for%20article.png"><img class="gallery2" id="curation_after_2" src="img/curation/after/2.display%20findings%20for%20article.png" alt="" /></a>
 
                 <p>The information layering was also improved by means of colors and typography and also by using icons
                     to make status of the findings more visible.</p>
@@ -299,7 +299,7 @@
                     careless work and errors. I found it interesting that the users cheated anyway by duplicating a completed finding,
                     modifying the required answers and rejecting the finding they were supposed to fill in the first
                     place.</p>
-                <a class="fancybox" rel="curation after" title="Home screen" href="img/curation/after/3.display%20findings%20for%20article%20-%20fill%20multiple%20findings.png"><img class="gallery1" id="curation_after_3" src="img/curation/after/3.display%20findings%20for%20article%20-%20fill%20multiple%20findings.png" alt="" /></a>
+                <a class="fancybox" rel="curation after" title="Completing multiple findings with the same information to reduce time and errors" href="img/curation/after/3.display%20findings%20for%20article%20-%20fill%20multiple%20findings.png"><img class="gallery1" id="curation_after_3" src="img/curation/after/3.display%20findings%20for%20article%20-%20fill%20multiple%20findings.png" alt="" /></a>
 
                 <p>The solution I proposed involves propagating the answers of a completed finding to all the findings
                     selected from the table. By hovering one of the selected rows, an icon would show up to the right
@@ -325,7 +325,7 @@
                     would become shorter. This is also
                     helping the visual separation.</p>
 
-                <a class="fancybox" rel="curation after" title="Home screen" href="img/curation/after/4.finding%20form%20-%20above%20fold.png"><img class="gallery1" id="curation_after_4" src="img/curation/after/4.finding%20form%20-%20above%20fold.png" alt="" /></a>
+                <a class="fancybox" rel="curation after" title="Improved finding form that makes better use of the horizontal space and displays a better visual hierarchy" href="img/curation/after/4.finding%20form%20-%20above%20fold.png"><img class="gallery1" id="curation_after_4" src="img/curation/after/4.finding%20form%20-%20above%20fold.png" alt="" /></a>
 
                 <p>There is also a subtle change to the position of the buttons. The navigation buttons were moved to
                     the sides and the call to action button was placed in the middle, not to be missed and also not to change
@@ -348,9 +348,9 @@
                     some values. This means there are some logical groupings hidden in there and
                     they match the mental model of the users when filling in or verifying information and that gave me
                     the idea of making them visible. I did this by giving the users the possibility to color and move rows.</p>
-                <a class="fancybox" rel="curation after" title="Home screen" href="img/curation/after/6.finding%20form%20-%20genotype%20table%20-%20multiple%20rows.png"><img class="gallery3" id="curation_after_6" src="img/curation/after/6.finding%20form%20-%20genotype%20table%20-%20multiple%20rows.png" alt="" /></a>
-				<a class="fancybox" rel="curation after" title="Home screen" href="img/curation/after/7.finding%20form%20-%20genotype%20table%20-%20multiple%20rows%20-%20grouping.png"><img class="gallery3" id="curation_after_7" src="img/curation/after/7.finding%20form%20-%20genotype%20table%20-%20multiple%20rows%20-%20grouping.png" alt="" /></a>
-				<a class="fancybox" rel="curation after" title="Home screen" href="img/curation/after/8.finding%20form%20-%20genotype%20table%20-%20multiple%20rows%20-%20focus.png"><img class="gallery3" id="curation_after_8" src="img/curation/after/8.finding%20form%20-%20genotype%20table%20-%20multiple%20rows%20-%20focus.png" alt="" /></a>
+                <a class="fancybox" rel="curation after" title="Genotype table with simplified, more compact and better separated rows. The actions are visible only on demand." href="img/curation/after/6.finding%20form%20-%20genotype%20table%20-%20multiple%20rows.png"><img class="gallery3" id="curation_after_6" src="img/curation/after/6.finding%20form%20-%20genotype%20table%20-%20multiple%20rows.png" alt="" /></a>
+				<a class="fancybox" rel="curation after" title="Option to color and move rows in order to create groups of rows that share similarities" href="img/curation/after/7.finding%20form%20-%20genotype%20table%20-%20multiple%20rows%20-%20grouping.png"><img class="gallery3" id="curation_after_7" src="img/curation/after/7.finding%20form%20-%20genotype%20table%20-%20multiple%20rows%20-%20grouping.png" alt="" /></a>
+				<a class="fancybox" rel="curation after" title="Focused row that makes the context switches easier" href="img/curation/after/8.finding%20form%20-%20genotype%20table%20-%20multiple%20rows%20-%20focus.png"><img class="gallery3" id="curation_after_8" src="img/curation/after/8.finding%20form%20-%20genotype%20table%20-%20multiple%20rows%20-%20focus.png" alt="" /></a>
 
                 <p>The last improvement was making the focused row more visible to also support context switches between
                     the screen and the written notes and decrease mental load and chance of error.</p>
@@ -363,8 +363,8 @@
 
                 <p>The solution I proposed was a breadcrumb bar at the top of the screen, visible all the time and with
                     no restrictions so that the users can navigate to whatever part of the application they want.</p>
-                <a class="fancybox" rel="curation after" title="Home screen" href="img/curation/after/9.navigation%20findings.png"><img class="gallery2" id="curation_after_9" src="img/curation/after/9.navigation%20findings.png" alt="" /></a>
-				<a class="fancybox" rel="curation after" title="Home screen" href="img/curation/after/10.navigation%20articles.png"><img class="gallery2" id="curation_after_10" src="img/curation/after/10.navigation%20articles.png" alt="" /></a>
+                <a class="fancybox" rel="curation after" title="Breadcrumb navigation with helpful information" href="img/curation/after/9.navigation%20findings.png"><img class="gallery2" id="curation_after_9" src="img/curation/after/9.navigation%20findings.png" alt="" /></a>
+				<a class="fancybox" rel="curation after" title="Breadcrumb navigation with helpful information" href="img/curation/after/10.navigation%20articles.png"><img class="gallery2" id="curation_after_10" src="img/curation/after/10.navigation%20articles.png" alt="" /></a>
 
                 <p>I also decorated the options with additional information that is needed during navigation, like the
                     status of a finding or the total number of findings of an article.</p>
