--- a/function_candidates.html
+++ b/function_candidates.html
@@ -81,47 +81,86 @@
 
 				<h2>PROBLEM TO SOLVE</h2>
 
-				<p>This is hardly a project but it is a nice example of how good typography can drastically
+				<p>This is hardly a project, but it is a nice example of how good typography can drastically
 					improve the experience of the users.</p>
 
-				<p>The task at hand was to generate a spreadsheet with standard name suggestions for manually introduced
-					data.The names in the second column were given at a time when the system had no internal
-					representation for biological functions and the functions were displayed as simple labels on a
-					canvas.
-					As time went by and functions were modeled in the system, there was a need to map the labels from
-					the canvas to the entities known by the system so that the labels become alive (double clicking them
-					would do something).</p>
+				<p>The task at hand was to generate a spreadsheet used internally to help content curators in their
+					efforts to update some files. They had to replace the name from the second column with the most
+					suitable name from the list of suggestions from the third column.</p>
 
-				<p>There is no other way than to do this mapping manually since there were terminology differences and a
-					computer could not be trusted to make the decisions.
-					In order to help the person doing all this manual work, we generated a spreadsheet with valid name
-					suggestions for each biological function.</p>
+				<p>Unfortunately, this had to be done manually, a few thousand times, and this motivated me to try to
+					make the task as easy as possible.</p>
+
+
 				<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/function_candidates/1.png"><img class="gallery1" id="function_candidates_1" src="img/function_candidates/1.png" alt="" /></a>
-				<p>In this stage, the user is presented with a list of suggestions that need to be read and pick the suggestion that makes the most sense. As you can tell, this is no easy task because it relies a lot on the working memory and of course, the user needs to do 20 comparisons before picking the right suggestion.</p>
-				<p>We can make this easier just by sorting the suggestions using a similarity metric between two sentences so that the user only needs to focus on the first items before making a decision.</p>
+
+				<p>At this stage, the user is presented with a list of suggestions that need to be read, and pick the
+					suggestion that makes the most sense. As you can tell, this is no easy task because it relies a lot
+					on the working memory, and of course, the user needs to do 20 comparisons before picking the right
+					suggestion.</p>
+
+				<p>We can make this easier just by sorting the suggestions using a similarity metric between two
+					names, so that the user only needs to focus on the first several items before making a decision.</p>
 				<a class="fancybox" rel="group" title="Sorted list of suggestions, based on the similarity of the names" href="img/function_candidates/2.png"><img class="gallery1" id="function_candidates_2" src="img/function_candidates/2.png" alt="" /></a>
-				<p>This is a great improvement in usability but there is still a lot of room for improvement in the visual compartment.</p>
+
+				<p>This is a great improvement in usability, but there is still a lot of room for improvement in the
+					visual department.</p>
 
 				<h2>VISUAL SEPARATION</h2>
-				<p>One of the most annoying things of the previous version is the lack of visual separation between the items. There are of course commas and spaces but that is not enough.</p>
-				<p>The way to achieve separation is to present the terms in the form of a vertical list. That way, each term sits on a separate row and it is easily recognizable. Knowing the fact that the final spreadsheet will have a few thousands sections, vertical space becomes important and instead of having a single column list, I decided to go for a two columns list.</p>
+
+				<p>One of the most annoying things of the previous version is the lack of visual separation between the
+					items. There are of course commas and spaces, but that is not enough.</p>
+
+				<p>The way to achieve separation, is to present the terms in the form of a vertical list. That way, each
+					term sits on a separate row and it is easily recognizable. Knowing the fact that the final
+					spreadsheet will have a few thousands sections, vertical space becomes important and instead of
+					having a single column, I decided to go for a two columns list.</p>
 				<a class="fancybox" rel="group" title="Vertical alignment of the suggestions in two columns to improve visual separation" href="img/function_candidates/3.png"><img class="gallery1" id="function_candidates_3" src="img/function_candidates/3.png" alt="" /></a>
-				<p>The next step was to add some more vertical space between the sections since the grey lines of the spreadsheet were not enough to make a clear distinction between these tall rows with a lot of content.</p>
+
+				<p>The next step was to add some more vertical space between the sections, since the grey lines of the
+					spreadsheet were not enough to make a clear distinction between these tall rows with a lot of
+					content.</p>
 				<a class="fancybox" rel="group" title="Space added to improve separation of the rows" href="img/function_candidates/4.png"><img class="gallery1" id="function_candidates_4" src="img/function_candidates/4.png" alt="" /></a>
-				<p>Now the problem becomes the order of reading inside the two column list. Just to make sure the user gets confused between reading from left to right or going down the first column and continuing to the next one, I added indices for each suggestion.</p>
+
+				<p>Now the problem becomes the order of reading inside the two columns list. Just to make sure the user
+					doesn't get confused between reading from left to right or going down the first column and continuing to
+					the next one, I added indices for each item.</p>
 				<a class="fancybox" rel="group" title="Indices added to emphasize the order" href="img/function_candidates/5.png"><img class="gallery1" id="function_candidates_5" src="img/function_candidates/5.png" alt="" /></a>
-				<p>There is not much left to do in the separation department except aligning the first column since the last item is slightly shifted to the right due to the larger size of the index and this is breaking the vertical flow of the information.</p>
+
+				<p>There is not much left to do in the separation department, except aligning the first column, since the
+					last item is slightly shifted to the right due to the larger size of the index, and this is breaking
+					the vertical flow of the information.</p>
 				<a class="fancybox" rel="group" title="Shifted the first nine items to the right to improve the vertical alignment" href="img/function_candidates/6.png"><img class="gallery1" id="function_candidates_6" src="img/function_candidates/6.png" alt="" /></a>
 
 				<h2>LAYERS OF INFORMATION</h2>
-				<p>The improvements thus far have been great. We now have a sorted list of suggestions where the items are clearly identifiable and the rows as well.</p>
-				<p>Going through the user scenario again reveals that the names of the suggested functions are still a little bit hard to extract from the row they sit on. We can further improve this by making the index and the ID information less visible, emphasizing in this way the information that is important for the user, the actual name of the function. The ID is also important, but only in a following scenario where the user has to fill in more information and not in the scenario where he has to pick the best name from the list.</p>
+
+				<p>The improvements thus far have been great. We now have a sorted list of suggestions where the items
+					are clearly identifiable, and the rows as well.</p>
+
+				<p>Going through the user scenario again reveals that the names of the suggested functions are still a
+					little bit hard to extract from the row they sit on. We can further improve this by making the index
+					and the ID information less visible, emphasizing in this way the information that is important for
+					the user, the actual name of the function. The ID is also important, but only in a following
+					step where the user has to fill in more information, and not here, where he has to pick
+					the best name from the list.</p>
 				<a class="fancybox" rel="group" title="Made indices and IDs less noticeable to emphasize the important information" href="img/function_candidates/7.png"><img class="gallery1" id="function_candidates_7" src="img/function_candidates/7.png" alt="" /></a>
-				<p>At this point I thought the job was done and that there was nothing else I could do to improve the usability. I did run through the whole scenario again to see how easy it is to execute the task and I noticed that in order to make the choice with confidence I would try to see why the top suggestions are there in the first place and in what way they differ from the original function name and from each other. I was actually rerunning the word similarity function in my mind and that was uncomfortable. I was that moment I realized I can use the computed similarities in a visual way to convey to the user reason behind that specific order.</p>
+
+				<p>At this point I thought the job was done and that there was nothing else I could do to improve the
+					usability. I did run through the whole scenario again, to see how easy it is to execute the task, and
+					I noticed that in order to make the choice with confidence, I would try to convince myself that the order was right.
+					I was actually computing the word similarity function in my mind, and that was
+					exhausting.</p>
+
+				<p>It was that moment I realized I can use the already computed similarities in a visual way, to
+					convey to the user the reason behind that specific order of the suggestions.</p>
 				<a class="fancybox" rel="group" title="Highlighted matching sequences to support the decision making process" href="img/function_candidates/8.png"><img class="gallery1" id="function_candidates_8" src="img/function_candidates/8.png"/></a>
 
 				<h2>CONCLUSION</h2>
-				<p>This is good example of how focusing on the user's task and changing small details can improve the usability of a visual representation. Unfortunately I did not get any feedback from the real users of this spreadsheet but I am sure they appreciate the effort.</p>
+
+				<p>This is good example of how focusing on the user's task, and changing small details, can improve the
+					usability of a visual representation.
+					Unfortunately, I did not get any feedback from the real users of this spreadsheet, but I am sure
+					they appreciate the effort.</p>
 			</div>
 		</div>
 	</body>
