reviewed HCI course  article

--- a/be_healthy.html
+++ b/be_healthy.html
@@ -86,29 +86,29 @@
 					class.</p>
 
 				<p>We had to make a choice between three broad themes and I decided to go with the CHANGE theme. So the
-					project had to help users make a change in their lives. This fit me like a glove since I had a lot
+					project had to help users make a change in their lives. This fit me like a glove, since I had a lot
 					of
-					interest during that time in improving my health and changing my lifestyle and I was curious to see
+					interest during that time in improving my health and changing my lifestyle, and I was curious to see
 					if I can design a service that could help other people as well.</p>
 
-				<p>I had a pretty good idea of how the app would work for me especially because I knew my pain points
-					during the whole change process but I could not base my design only on my experience and needs.
+				<p>I had a pretty good idea of how the app would work for me, especially because I knew my pain points
+					during the whole change process, but I could not base my design only on my experience and needs.
 					So I went and observed and interviewed a few of my friends to see what their needs are and what
 					would motivate them to make a real change.</p>
 
 				<p>The interviews and observations were focused around three activities that are important to health :
 					eating, exercising and relaxing. Some of the participants were passionate about cooking, some about
 					sports,
-					some had no interest in any of them, so it was great to see different angles on the subject as well
+					some had no interest in any of them, so it was great to see different angles on the subject, as well
 					as very different pain points and motivating factors.</p>
 
 				<p>In a nutshell, the needfinding process revealed a lack of education in all of the three areas and
 					also difficulties in getting and staying motivated to build healthy habits.
 					In order to solve that, the design incorporates a lot of educational materials, gently displayed on
-					most of the screen and makes heavy use of social interactions, social proof, smart notifications and
+					most of the screen, and makes heavy use of social interactions, social proof, smart notifications and
 					large, beautiful images.</p>
 
-				<p>In order to keep myself anchored in the real context of the application usage during the design
+				<p>In order to keep myself anchored in the real context of usage of the application during the design
 					process, I created a couple of storyboards that sum up the interactions between the users and the
 					service.</p>
 
@@ -126,7 +126,7 @@
 
 				<p>The web application is intended for home usage and leverages beautiful, large, appealing images and a
 					lot of educational material. The following screens are the screens required to complete the scenario
-					from the first storyboard, that is cooking a dinner on a Sunday evening.</p>
+					from the first storyboard; cooking a dinner on a Sunday evening.</p>
 
 				<a class="fancybox" rel="web_wireframes" title="Home screen" href="img/hci_project/digital mockups/1.homescreen.png"><img class="gallery4" id="function_candidates_1" src="img/hci_project/digital mockups/1.homescreen.png" alt=""/></a>
 				<a class="fancybox" rel="web_wireframes" title="Food screen" href="img/hci_project/digital mockups/2.food.png"><img class="gallery4" id="function_candidates_1" src="img/hci_project/digital mockups/2.food.png" alt=""/></a>
@@ -140,14 +140,14 @@
 
 				<p>The mobile version of the service is intended to help complete the scenarios started in the web
 					version and offers actions needed when the user is gone shopping for healthy food, exercising or
-					relaxing. The following screens are a continuation of the scenario presented above.</p>
+					relaxing. The following screens are a continuation of the scenario presented above:</p>
 
 				<a class="fancybox" rel="mobile_wireframes" title="Mobile Sketches of the scenario where the user goes shopping with a previously created shopping list" href="img/hci_project/hand drawn/mobile_sketches.jpg"><img id="function_candidates_1" src="img/hci_project/hand drawn/mobile_sketches.jpg" alt="" /></a>
 
-				<h2>PROTPTYPES</h2>
+				<h2>PROTOTYPES</h2>
 
 				<p>After getting some critique from my peers doing heuristic evaluation, I built the interactive
-					prototypes to be used in testing with real users. Both web and mobile versions were created using
+					prototypes to be used when testing with real users. Both web and mobile versions were created using
 					Just In Mind prototyping tool.</p>
 
 				<h3>Website</h3>
@@ -185,11 +185,13 @@
 				<h2>CONCLUSION</h2>
 
 				<p>After 10 weeks of hard work, I learned a lot about the whole design process, from finding the user
-					needs to testing the wireframes and the interactive polished prototypes.
-					It was a great learning experience and besides all this, I was also awarded a statement of
-					accomplishment to prove my involvement and dedication during the class.
-					I am proud to say that I am one of the less than 200 students that obtained the certificate, from a
-					total of 16000 that enrolled.</p>
+					needs, to testing the wireframes and the interactive polished prototypes.</p>
+
+				<p>It was a great learning experience and besides all this, I was also awarded a <a class="fancybox" data-fancybox-type="iframe" href="Coursera hciucsd 2014.pdf">Statement of Accomplishment</a>
+					to prove my involvement and dedication during the class.</p>
+
+				<p>I am proud to say I am one of the less than 200 students who obtained the certificate, from a
+					total of 16000 enrolled.</p>
 			</div>
 		</div>
 	</body>
