final review before asking for feedback on quora

--- a/projects.html
+++ b/projects.html
@@ -50,10 +50,10 @@
 		</div>
 		<div id="right_panel">
 			<div id="about_projects">
-				<p>These are a part of the projects I have been working on. You can read the whole story for each project where there is a lenghty text will all the design steps in detail, or just click on the pictures and go through the slideshows. 
-				Each picture has a meaningfull description and you will still be able to follow the story even if you don't have the time for the detailed description.</p>
+				<p>These are a part of the projects I have been working on. You can read the whole story for each project, where there is a lengthy text will all the design steps in detail, or just click on the pictures and go through the slide shows.
+				Each picture has a meaningful description and you will still be able to follow the story, even if you don't have the time for the more detailed description.</p>
 				<p>Unfortunately, some of the most interesting things I have done are under Non Disclosure Agreements and I cannot share them here. 
-				I am currently in the process of getting approval for some of them and luckily I will be able to post them soon.</p>
+				I am currently in the process of getting approval for some of them, and luckily I will be able to post them soon.</p>
 			</div>
 
 			<div id="projects_list">
@@ -92,7 +92,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="project_title">Biological Content Curation Tool</div>
+					<div class="project_title">Redesigning a Biological Content Curation Tool</div>
 				</div>
 
 				<div class="project">
@@ -111,7 +111,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="project_title">Biological Functions Suggestions Spreadsheet</div>
+					<div class="project_title">Improving the usability of a spreadsheet</div>
 				</div>
 				
 				<div class="project">
@@ -131,7 +131,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="project_title">Test Execution History Widget</div>
+					<div class="project_title">Designing an interactive QA widget</div>
 				</div>
 				
 				<div class="project">
@@ -152,7 +152,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="project_title">Be healthy - HCI Course Project</div>
+					<div class="project_title">Designing a health improvement service</div>
 				</div>
 
 			</div>
